Added dark/light mode option

--- a/now.json
+++ b/now.json
@@ -15,6 +15,10 @@
             "src": "*.js", 
             "use": "@now/static" 
         },
+        { 
+            "src": "*.css", 
+            "use": "@now/static" 
+        },
         {
             "src": "players.json",
             "use": "@now/static" 
